hphp/test/slow/enum_class/enum_class18.php.expectf
Fatal error: Type is not a class in %s/enum_class18.php on line 9
